2010-07-08  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(clean-extract-ecj): Don't depend on clean-patch-ecj,
	just delete the stamp.
	(clean-extract-openjdk): Likewise for clean-patch and
	clean-patch-fsg.

2010-07-06  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(PULSE_JAVA_BUILDDIR): Use a different name from
	the source directory to avoid confusion.
	(clean-local): jni-common.o is not in the top-level
	directory.
	(icedtea): Locate pulse-java.jar in build directory
	not top-level directory.
	(icedtea-debug): Likewise.
	(pulse-java-jar): Likewise.
	(clean-pulse-java): Likewise.  Given clean-pulse-java
	only exists when PULSE_JAVA_NATIVE_BUILDDIR and
	PULSE_JAVA_CLASS_DIR are set, there is no need to test
	them.

2010-07-05  Andrew John Hughes  <ahughes@redhat.com>

	Revert rt.jar only for ecj tree.  Don't do
	so (or build rt-class-files) for builds with
	OpenJDK.  Make variable naming clearer.
	* Makefile.am:
	(BOOT_DIR): Renamed from ICEDTEA_BOOT_DIR.
	(RUNTIME): Renamed from ICEDTEA_RT.
	(ENDORSED_DIR): Renamed from ICEDTEA_ENDORSED_DIR.
	(ECJ_BOOT_DIR): Shortcut for bootstrap/ecj.
	(ICEDTEA_BOOT_DIR): Shortcut for bootstrap/icedtea.
	(rt-class-files): Only build replacement runtime classes
	when LACKS_SUN_AWT_TOOLKIT is set.
	(clean-rt): Only replace rt.jar when LACKS_SUN_AWT_TOOLKIT
	and overwrite in $(ECJ_BOOT_DIR) not $(BOOT_DIR).

2010-07-05  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(clean-local): Don't remove the stamps directory here.
	(distclean-local): Remove it here.

2010-07-04  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(clean-local): Add missing dependencies.
	Use rmdir to remove bootstrap and lib to make
	sure they are empty.  Use rmdir to remove the
	empty stamps directory.
	(clean-extract-openjdk): Depend on clean-patch-fsg.
	(clean-patch-fsg): Depend on clean-patch.
	(clean-extract-ecj): Depend on clean-patch-ecj.
	(rewriter): Give the build directory a different